--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,5 +1,9 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=3B69226F413C129DCBCB82BB5775D277
+CompanyName=rufflerim
+CompanyDistinguishedName=Rufflerim
+Homepage=rufflerim.itch.io
+CopyrightNotice=MIT Licence
 
 [StartupActions]
 bAddPacks=True
