--- a/BuildingEscape.uproject
+++ b/BuildingEscape.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "{1DAC8D3C-1904-1604-0034-00BD73FD1E4D}",
+	"EngineAssociation": "4.15",
 	"Category": "",
 	"Description": "",
 	"Modules": [
