Simple paddle movement

--- a/Pong/Config/DefaultEngine.ini
+++ b/Pong/Config/DefaultEngine.ini
@@ -12,7 +12,21 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="PongGameModeBase")
 
 [/Script/EngineSettings.GameMapsSettings]
-GlobalDefaultGameMode=/Script/Pong.PongGameModeBase
 EditorStartupMap=/Game/Lvl_Gameplay.Lvl_Gameplay
+LocalMapOptions=
+TransitionMap=None
+bUseSplitscreen=True
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+FourPlayerSplitscreenLayout=Grid
+bOffsetPlayerGamepadIds=False
+GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Game/Lvl_Gameplay.Lvl_Gameplay
+ServerDefaultMap=/Engine/Maps/Entry.Entry
+GlobalDefaultGameMode=/Game/Blueprints/BP_PongGameMode.BP_PongGameMode_C
+GlobalDefaultServerGameMode=None
+
+[/Script/LuminRuntimeSettings.LuminRuntimeSettings]
+IconModelPath=(Path="")
+IconPortalPath=(Path="")
 
