--- a/MovementTraining/MovementTraining.uproject
+++ b/MovementTraining/MovementTraining.uproject
@@ -7,7 +7,16 @@
 		{
 			"Name": "MovementTraining",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine"
+			]
+		}
+	],
+	"Plugins": [
+		{
+			"Name": "NiagaraExtras",
+			"Enabled": true
 		}
 	]
 }
