Add physics map

--- a/MovementTraining/Config/DefaultEngine.ini
+++ b/MovementTraining/Config/DefaultEngine.ini
@@ -7,8 +7,8 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/StarterContent/Maps/Minimal_Default
-GameDefaultMap=/Game/StarterContent/Maps/Minimal_Default
+EditorStartupMap=/Game/Movement02_Physics.Movement02_Physics
+GameDefaultMap=/Game/Movement02_Physics.Movement02_Physics
 GlobalDefaultGameMode=/Game/Blueprints/BP_MovementTrainingGM.BP_MovementTrainingGM_C
 
 [/Script/Engine.Engine]
